test/results_check/destrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egress-for-bbc-co-uk
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: bbc-co-uk
