test/results_check/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bbc-co-uk-gateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: bbc-co-uk-80
      protocol: HTTP
    hosts:
    - bbc.co.uk
  - port:
      number: 443
      name: bbc-co-uk-443
      protocol: TLS
    hosts:
    - bbc.co.uk
    tls:
      mode: PASSTHROUGH
