test/results_check/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-bbc-co-uk
spec:
  hosts:
  - bbc.co.uk 
  gateways:
  - mesh
  - bbc-co-uk-gateway
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: bbc-co-uk
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - bbc-co-uk-gateway
      port: 80
    route:
    - destination:
        host: bbc.co.uk
        port:
          number: 80
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - bbc.co.uk
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: bbc-co-uk
        port:
          number: 443
      weight: 100
  - match:
    - gateways:
      - bbc-co-uk-gateway
      port: 443
      sniHosts:
      - bbc.co.uk
    route:
    - destination:
        host: bbc.co.uk 
        port:
          number: 443
